# cloak

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  documents-plan.md  policy.md  threat-model.md
eval/: gold.txt
examples/: README.md  mask_document.py  mcp_usage.md  proxy_quickstart.md  quickstart.py  strategies_and_profiles.py  wrap_openai.py
examples/data/: kundenkartei.redacted.txt
src/cloak/: __init__.py  cli.py  coref.py  engine.py  evaluate.py  mcp_server.py  patterns.py  policy.py  profiles.py  resolver.py  types.py  validators.py  vault.py
src/cloak/detectors/: __init__.py  base.py  llm_detector.py  ner_detector.py  phone_detector.py  regex_detector.py
src/cloak/documents/: __init__.py  masker.py  parser.py  types.py
src/cloak/documents/renderers/: __init__.py  json_.py  markdown.py  pdf.py
src/cloak/proxy/: __init__.py  server.py  streaming.py
src/cloak/strategies/: __init__.py  base.py  hash_strategy.py  placeholder.py  pseudonym.py  redact.py
tests/: test_cli.py  test_coref.py  test_documents.py  test_engine_roundtrip.py  test_evaluate.py  test_llm_detector.py  test_ner_detector.py  test_phone_detector.py  test_profiles_config.py  test_proxy_integration.py  test_proxy_mask.py  test_regex_detector.py  test_resolver.py  test_strategies.py  test_streaming.py  test_validators.py  test_vault.py
